# VLineVBaseFirmware

./: .cproject  .project  CMakeLists.txt
AVCLan/: AVCLanDrvRxTx.cpp  AVCLanDrvRxTx.h  AVCLanMessage.cpp  AVCLanMsg.cpp  AVCLanMsg.h  AVCLanRx.cpp  AVCLanRx.h  AVCLanTx.cpp  AVCLanTx.h  CDChanger.cpp  CDChanger.h  Device.cpp  Device.h  Device_BACKUP_69776.h  Device_REMOTE_69776.h  Driver.cpp  Driver.h  DriverBase.cpp  DriverBase.h  DriverRx.cpp  DriverRx.h  DriverTx.cpp  DriverTx.h  IEBusMessage.cpp  IEBusMessage.h  InputListener.cpp  MessageRaw.cpp  MessageRaw.h  Protocol.cpp  Protocol.h
AVCLan/include/: AVCLanMessage.h  CDChanger.h  Device.h  Driver.h  DriverBase.h  DriverRx.h  DriverTx.h  IEBusMessage.h  InputListener.h  Protocol.h
Defines/: defines.h
include/: AVCLanDrv.h  AVCLanDrvRxTx.h  AVCLanMsg.h  AVCLanRx.h  AVCLanTx.h  VCoreCommunication.h  callback.h  power.h  timer.h  uart.h  util.h  vcore_power.h
ldscripts/: mem.ld  sections.ld
src/: VCoreCommunication.cpp  main.cpp  power.cpp  timer.cpp  uart.cpp  util.cpp  vcore_power.cpp
src/AVCLan/: AVCLanDrv.cpp  AVCLanDrvRxTx.cpp  AVCLanMsg.cpp  AVCLanRx.cpp  AVCLanTx.cpp  BuffSerial.cpp  BuffSerial.h
src/OLD/: AVCLanDrvOLD.cpp  AVCLanDrvOLD.h  gpioTest.cpp
system/driver/: GPDMA_LPC17xx.c  I2S_LPC17xx.c  I2S_LPC17xx.h  PIN_LPC17xx.c  UART_LPC17xx.c  UART_LPC17xx.h
system/driver/CMSIS-Driver/: Driver_CAN.h  Driver_ETH.h  Driver_ETH_MAC.h  Driver_ETH_PHY.h  Driver_Flash.h  Driver_I2C.h  Driver_MCI.h  Driver_NAND.h  Driver_SAI.h  Driver_SPI.h  Driver_Storage.h  Driver_USART.h  Driver_USB.h  Driver_USBD.h  Driver_USBH.h  Driver_WiFi.h
system/driver/Config/: RTE_Device.h
system/include/cmsis/: core_cm3.h
system/src/cmsis/: startup_LPC17xx.c  vectors_LPC17xx.c
system/src/lpc1765/: lpc17xx_timer.c
